artist-page: fix impressum on mobile, scroll bounce & project page spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,9 @@
 		--header-height-desktop: 4.5rem;
 		--footer-height-mobile: 3rem;
 		--footer-height-desktop: 3rem;
-		--showreel-height-mobile: calc(100svh - var(--footer-height-mobile));
+		--showreel-height-mobile: calc(
+			100svh - var(--header-height-desktop) - var(--footer-height-mobile)
+		);
 		--showreel-height-desktop: calc(
 			100svh - var(--header-height-desktop) - var(--footer-height-desktop)
 		);
@@ -134,6 +136,7 @@
 html,
 body {
 	-webkit-font-smoothing: antialiased;
+	overscroll-behavior: none;
 }
 
 /* a,
